--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
- 
-<body>
-  <h1>BAO TRUNG</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
+  <body>
+    <h1>BAO TRUNG</h1>
+    <p>This is my new website, I am so happy to show you!</p>
+    <img
+      src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"
+    />
+  </body>
 </html>
